# ReasonMetrics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SPEC.md  reasonmetrics.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json
.github/ISSUE_TEMPLATE/: bug.md  miscalibration.md  new-model.md
.github/workflows/: ci.yml  deploy.yml  leaderboard.yml  npm.yml  path-guard.yml  release.yml  wheels.yml
crates/reasonmetrics-cli/: Cargo.toml
crates/reasonmetrics-cli/benchsets/: overthinking-v1.jsonl  overthinking-v2.jsonl
crates/reasonmetrics-cli/src/: main.rs  parser.rs  pipeline.rs
crates/reasonmetrics-cli/src/bench/: aggregate.rs  judge.rs  leaderboard.rs  mod.rs  model.rs  result.rs  runner.rs  score.rs  site.rs  taskset.rs
crates/reasonmetrics-cli/src/output/: jsonl.rs  mod.rs  parquet.rs  report.rs
crates/reasonmetrics-cli/tests/: bench_cli.rs  integration_test.rs
crates/reasonmetrics-cli/tests/fixtures/: bad_scored.parquet  bad_traces.jsonl  good_scored.parquet  good_traces.jsonl
crates/reasonmetrics-core/: Cargo.toml  build.rs
crates/reasonmetrics-core/src/: annotate.rs  config.rs  errors.rs  lib.rs  registry.rs  scoring.rs  trace.rs
crates/reasonmetrics-core/src/calibration/: mod.rs  table.rs
crates/reasonmetrics-core/src/scorers/: accuracy_efficiency.rs  alignment.rs  efficiency.rs  language.rs  length.rs  mod.rs  overthinking.rs  repetition.rs  structure.rs  verification.rs
crates/reasonmetrics-core/tests/: adversarial.rs
crates/reasonmetrics-core/tests/fixtures/adversarial/: alignment-bolted-conclusion.json  efficiency-paraphrased-restarts.json  language-cjk-inline.json  overthinking-padded-problem.json  repetition-paraphrase-spin.json  structure-cargo-cult.json  verification-hollow.json
crates/reasonmetrics-py/: Cargo.toml  pyproject.toml
crates/reasonmetrics-py/src/: lib.rs
crates/reasonmetrics-wasm/: Cargo.toml  LICENSE
crates/reasonmetrics-wasm/src/: lib.rs
crates/reasonmetrics-wasm/tests/: node.rs
docs/: BENCH.md  CALIBRATION.md  LIMITATIONS.md  launch.md
docs/superpowers/plans/: 2026-07-15-reasonmetrics-bench.md
docs/superpowers/specs/: 2026-07-15-reasonmetrics-bench-design.md  2026-07-17-compare-two-traces-design.md
examples/: README.md  curate_a_reasoning_dataset.ipynb  curate_a_reasoning_dataset.py
leaderboard/: README.md  index.html
registry/: claude-extended-thinking.toml  deepseek-r1.toml  glm.toml  gpt-oss.toml  qwen3.toml
registry/fixtures/: claude-extended-thinking.json  deepseek-r1.json  glm.json  gpt-oss.json  qwen3.json
results/: README.md
scripts/: build_code_labels.py  build_correctness_labels.py  calibrate.py  convert_dataset.py  filter_study.py  fit_calibration.py  gen_benchset.py  llm_judge.py  reweight_study.py
showcase/: COMPARISON.md  RESULTS.md  limo_report.html  medical_report.html  openthoughts_report.html  s1k_report.html
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/gallery/: concise-qwen.json  index.json  language-mixing.json  r1-rambling.json  restart-loop.json  verified-tidy.json
web/src/: App.test.tsx  App.tsx  main.tsx  style.css  test-setup.ts
web/src/components/: AnatomyHeader.tsx  AnatomyView.test.tsx  AnatomyView.tsx  AnnotatedText.tsx  ComparePanel.test.tsx  ComparePanel.tsx  CompareScores.test.tsx  CompareScores.tsx  GalleryStrip.test.tsx  GalleryStrip.tsx  InputPanel.mapping.test.tsx  InputPanel.test.tsx  InputPanel.tsx  Legend.tsx  LivePanel.test.tsx  LivePanel.tsx  MappingDialog.tsx  RecordList.test.tsx  RecordList.tsx  ScoreCard.tsx  ShareBar.test.tsx  ShareBar.tsx  TraceSlot.test.tsx  TraceSlot.tsx  scoreClass.ts
web/src/hooks/: useHashRestore.test.ts  useHashRestore.ts
web/src/lib/: aliases.test.ts  aliases.ts  gallery.fixtures.test.ts  gallery.test.ts  gallery.ts  input.pipeline.test.ts  input.test.ts  input.ts  ollama.test.ts  ollama.ts  share.test.ts  share.ts  spans.test.ts  spans.ts  storage.ts  types.ts  wasm.test.ts  wasm.ts
