[package]
name = "reasonmetrics-core"
description = "Reasoning-trace quality scoring engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
regex = "1"
whichlang = "0.1"
rayon = { version = "1.10", optional = true }
