[package]
name = "reasonmetrics-py"
description = "Python bindings for the reasonmetrics reasoning-trace scoring engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "reasonmetrics"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39"] }
pythonize = "0.23"
rayon = "1.10"
reasonmetrics-core = { path = "../reasonmetrics-core" }
serde_json = "1"

[features]
# Enabled by maturin (see pyproject.toml); off by default so `cargo test`
# can link against a real libpython.
extension-module = ["pyo3/extension-module"]
