[package]
name = "reasonmetrics-wasm"
description = "WebAssembly bindings for the reasonmetrics scoring engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reasonmetrics-core = { path = "../reasonmetrics-core", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Current rustc emits bulk-memory wasm32 instructions by default; the
# binaryen build wasm-pack 0.13.1 bundles predates that and rejects them
# with "Bulk memory operations require bulk memory [--enable-bulk-memory]".
# Pass the flag through instead of losing wasm-opt's size optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
